--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,37 +17,7 @@
 
 <body class="p-2 sm:px-0 max-w-580 mx-auto">
   <div class="has fixed bg-white h-2 z-8 top-0 max-w-[inherit] mx-auto my-0 inset-x-2 sm:inset-x-0"></div>
-  <header class="mb-5">
-    <div class="fixed border z-8 max-w-580 mx-auto p-2 rounded-xl border-solid top-2 inset-x-2 border-transparent" data-js="container-header">
-      <div class="flex justify-between" data-js="header-profile">
-        <button class="inline-flex place-center w-10 h-10 rounded-lg bg-gray-900 cursor-pointer text-white"
-          data-js="{% if page.url == '/' %}header_button--share{% else %}header_button--back{% endif %}">
-          <svg class="w-5 h-5 fill-current" width="100%" height="100%">
-            <use xlink:href="{% if page.url == '/' %}#i.share{% else %}#i.back{% endif %}"></use>
-          </svg>
-        </button>
-        <div class="hidden" data-js="header_button--profile"><img class="w-10 h-10 rounded-full" src="{{ site.logo }}"/></div>
-        <a class="inline-flex place-center w-10 h-10 rounded-lg bg-gray-900 cursor-pointer text-white" href="/search">
-          <svg class="w-5 h-5 fill-current" width="100%" height="100%">
-            <use xlink:href="#i.search"></use>
-          </svg>
-        </a>
-      </div>
-    </div>
-    <div class="w-full h-44 bg-gray-300 p-2 rounded-xl text-center flex flex-col items-center justify-end gap-y-1.5" data-js="container-background">
-      {% if page.url == '/' %}
-        <div class="flex justify-center relative">
-          <img class="h-16 w-16 border-4 border-white rounded-full object-cover" src="{{ site.logo }}" alt="{{ site.title }}">
-        </div>
-        <h3 class="font-bold text-lg text-gray-900">{{ site.title }}</h3>
-        <p class="text-sm text-gray-600">{{ site.description }}</p>
-      {% else %}
-        <h1 class="text-xl md:text-2xl font-bold text-gray-800">Featured Products</h1>
-        <p class="text-sm md:text-base text-gray-600">Temukan produk terpopuler pilihan kami.</p>
-      {% endif %}
-    </div>
-    <div id="global-results" style="position: absolute; background: white; border: 1px solid #ddd;"></div>
-  </header>
+  <header class="mb-5">{% include Header.html %}</header>
 
   <main class="mb-5">{{ content }}</main>
 
@@ -122,10 +92,10 @@
                 </div>
               </div>
             </div>
-            <button class="w-7 h-7 flex place-center border bg-white font-semibold cursor-pointer rounded-md border-solid absolute left-1.5 top-1.5">
+            <button class="w-7 h-7 flex place-center bg-white font-semibold cursor-pointer rounded-md absolute left-1.5 top-1.5">
               <svg class="w-3.5 h-3.5" width="100%" height="100%"><use xlink:href="#i.bookmark"></use></svg>
             </button>
-            <label class="w-7 h-7 flex place-center border bg-white font-semibold cursor-pointer rounded-md border-solid absolute right-1.5 top-1.5" for="inModal--product">✕</label>
+            <label class="w-7 h-7 flex place-center bg-white font-semibold cursor-pointer rounded-md absolute right-1.5 top-1.5" for="inModal--product">✕</label>
           </div>
           <div class="grid grid-cols-1 gap-1.5 px-1.5" data-js="modal:product__content"></div>
           <div class="inModal__footer">
