--- a/_includes/Header.html
+++ b/_includes/Header.html
@@ -11,7 +11,7 @@
   </div>
 </div>
 
-<div class="w-full h-44 bg-gray-300 p-2 rounded-xl text-center flex flex-col items-center justify-end gap-y-1.5" data-js="container-background">
+<div class="w-full h-44 bg-neutral-300 p-2 rounded-xl text-center flex flex-col items-center justify-end gap-y-1.5" data-js="container-background">
   {% if page.url == '/' %}
 
     <div class="flex justify-center relative">
@@ -24,7 +24,7 @@
     <h1 class="text-lg font-semibold text-slate-800">Sedang Mencari Sesuatu?</h1>
     <div class="flex items-center px-2 border border-slate-200 rounded-lg w-full bg-white">
       <svg class="h-4 w-4 mr-2" width="100%" height="100%"><use xlink:href="#i.fire"></use></svg>
-      <input class="w-full bg-transparent placeholder:text-slate-400 text-slate-700 text-sm px-1 py-2 focus:outline-none" placeholder="Masukkan code produk" id="search-input">
+      <input class="w-full bg-transparent placeholder:text-slate-400 text-slate-700 text-sm px-1 py-2 focus:outline-none" placeholder="Masukkan nama atau kode produk di sini" id="search-input">
     </div>
 
   {% else %}
