--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
   <main class="mb-5">{{ content }}</main>
 
   <footer class="">
-    <div class="w-full h-auto bg-gray-300 rounded-xl text-center p-6 flex flex-col items-center justify-end gap-4">
+    <div class="w-full h-auto bg-neutral-300 rounded-xl text-center p-6 flex flex-col items-center justify-end gap-4">
       <img class="w-12 h-12 object-contain rounded-full" src="{{ site.logo }}" alt="PelukanRasa Logo" />
       <h2 class="text-xl font-semibold text-gray-800">PelukanRasa</h2>
       <div class="flex gap-4 text-gray-600">
