--- a/_includes/productItems.html
+++ b/_includes/productItems.html
@@ -3,9 +3,12 @@
     <div class="card-deco-img relative overflow-hidden aspect-square rounded-lg bg-gray-100">
       <img class="object-cover" alt="{{ product.name }}" src="{{ product.image | relative_url }}" loading="lazy" />
     </div>
-    <button class="absolute rounded-sm flex items-center inline-flex bg-gray-50 px-1 py-0.5 text-xs font-medium text-gray-500 h-5 top-1 right-1 cursor-pointer z-7">
+    <!-- <button class="absolute rounded-sm flex items-center inline-flex bg-gray-50 px-1 py-0.5 text-xs font-medium text-gray-500 h-5 top-1 right-1 cursor-pointer z-7">
       <svg class="w-3.5 h-3.5" width="100%" height="100%"><use xlink:href="#i.bookmark"></use></svg>
-    </button>
+    </button> -->
+    <label class="absolute rounded-sm flex items-center inline-flex bg-gray-50 px-1 py-0.5 text-xs font-medium text-gray-500 h-5 top-1 right-1 cursor-pointer z-7" for="inModal--comingSoon">
+      <svg class="w-3.5 h-3.5" width="100%" height="100%"><use xlink:href="#i.bookmark"></use></svg>
+    </label>
     <span class="absolute rounded-sm flex items-center inline-flex items-center bg-gray-50 px-1 py-0.5 text-xs font-medium text-gray-500 left-1 top-1">
       <svg class="w-3.5 h-3.5 opacity-70 text-yellow-400" width="100%" height="100%"><use xlink:href="#i.rating"></use></svg>
       <span class="ml-1">{{ product.rating }}</span>
