--- a/_includes/default/Script.html
+++ b/_includes/default/Script.html
@@ -241,3 +241,35 @@ initializeApplication();
   window.setting = JSON.parse('{{ site.data.setting | jsonify }}');
 </script>
 <script src="{{ '/assets/js/script_1.js' | relative_url }}"></script>
+
+<script>
+    document.addEventListener('DOMContentLoaded', () => {
+        const accordionTitles = document.querySelectorAll('.accordion-title');
+        
+        accordionTitles.forEach(title => {
+            title.addEventListener('click', () => {
+                const content = title.nextElementSibling;
+                const isOpen = title.classList.contains('open');
+                
+                // Tutup semua accordion lain
+                accordionTitles.forEach(otherTitle => {
+                    if (otherTitle !== title && otherTitle.classList.contains('open')) {
+                        const otherContent = otherTitle.nextElementSibling;
+                        otherContent.classList.remove('open');
+                        otherTitle.classList.remove('open');
+                    }
+                });
+                
+                if (isOpen) {
+                    // Tutup accordion
+                    content.classList.remove('open');
+                    title.classList.remove('open');
+                } else {
+                    // Buka accordion
+                    content.classList.add('open');
+                    title.classList.add('open');
+                }
+            });
+        });
+    });
+</script>
