--- a/_includes/Action/Promote/collections_list.html
+++ b/_includes/Action/Promote/collections_list.html
@@ -1,21 +1,24 @@
 {% assign data = include.product_data %}
 {% assign database_product = site.data.database_products[data.product_ref] %}
 <div class="relative border bg-neutral-100 border-2 border-neutral-300 p-4 rounded-xl" data-id="{{ data.id }}" data-ref="{{ data.product_ref }}">
-  <div class="flex items-center mb-4">
-    <div class="relative mr-3">
-      <div class="bg-gray-200 rounded-full w-14 h-14 flex place-center"><span class="font-bold text-2xl">B</span></div>
-      <div class="absolute bg-blue-500 rounded-full w-6 h-6 flex place-center border-2 border-white bottom-0 right-0">
-        <svg class="h-4 w-4 stroke-white" width="100%" height="100%"><use xlink:href="#i.crown"></use></svg>
+  <div class="flex items-center mb-4 justify-between">
+    <div class="flex">
+      <div class="bg-gray-200 rounded-full w-12 h-12 flex place-center mr-3"><span class="font-bold text-2xl">B</span></div>
+      <div class="">
+        <h2 class="text-base font-bold">{{ data.title }}</h2>
+        <span class="text-gray-500 flex items-center text-xs">
+          <svg class="w-4 h-4 me-1.5 stroke-gray-500" width="100%" height="100%"><use xlink:href="#i.fire"></use></svg>
+          {% assign product_length = database_product.size %}
+          <span>{{ data.textSum | replace: '[NUMBER]', product_length }}</span>
+        </span>
       </div>
     </div>
-    <div class="">
-      <h2 class="text-xl font-bold">{{ data.title }}</h2>
-      <span class="text-gray-500 flex items-center text-sm">
-        <svg class="w-4 h-4 me-1.5 stroke-gray-500" width="100%" height="100%"><use xlink:href="#i.fire"></use></svg>
-        {% assign product_length = database_product.size %}
-        <span>{{ data.textSum | replace: '[NUMBER]', product_length }}</span>
-      </span>
-    </div>
+    <button class="text-green-600 font-medium text-sm flex items-center">
+        See All
+        <svg class="w-4 h-4 ml-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
+        </svg>
+    </button>
   </div>
   <div class="grid grid-cols-3 gap-2">
     {% for i in (1..3) %}
